<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geekeclectic.android.stashcache.StashThreadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/embellishment_info"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/embellishment_source"
            android:inputType="textCapWords"
            android:hint="@string/embellishment_source_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/embellishment_type"
            android:inputType="textCapWords"
            android:hint="@string/embellishment_type_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/embellishment_id"
            android:inputType="textCapWords"
            android:hint="@string/embellishment_id_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stash_info"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/number_owned"
                android:gravity="right"
                android:hint="@string/zero"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_owned_label"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/embellishment_pattern_info"
            android:layout_marginBottom="4dp"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/embellishment_pattern_display"
            android:text="@string/embellishment_pattern_detail" />

    </LinearLayout>

</ScrollView>