<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geekeclectic.android.stashcache.StashThreadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fabric_info"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/fabric_source"
            android:hint="@string/fabric_source_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fabric_type"
            android:hint="@string/fabric_type_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fabric_color"
            android:hint="@string/fabric_color_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/fabric_count"
                android:gravity="right"
                android:hint="@string/zero"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fabric_count_label"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fabric_size"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="right"
                android:id="@+id/fabric_width"
                android:hint="@string/zero_point"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fabric_width_label"
                android:layout_weight="1"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:id="@+id/fabric_height"
                android:hint="@string/zero_point"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fabric_height_label"
                android:layout_weight="1"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fabric_pattern_info"
            android:layout_marginBottom="4dp"
            style="?android:listSeparatorTextViewStyle" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:padding="4dp"
            android:id="@+id/fabric_pattern_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fabric_pattern_display"
            android:visibility="gone"
            android:text="@string/fabric_pattern_detail" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/fabric_start_group"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_menu_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabric_start_date_edit"
                android:clickable="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date_info"
                android:layout_marginBottom="4dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:id="@+id/fabric_start"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@id/fabric_start_date_edit"
                android:layout_toStartOf="@id/fabric_start_date_edit"
                android:layout_toRightOf="@id/fabric_start"
                android:layout_toEndOf="@id/fabric_start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="to be replaced"
                    android:id="@+id/fabric_start_date"
                    android:textAllCaps="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center" />

            </FrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/fabric_finish_group"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_menu_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabric_finish_date_edit"
                android:clickable="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_date_info"
                android:layout_marginBottom="4dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:id="@+id/fabric_finish"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@id/fabric_finish_date_edit"
                android:layout_toStartOf="@id/fabric_finish_date_edit"
                android:layout_toRightOf="@id/fabric_finish"
                android:layout_toEndOf="@id/fabric_finish">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="to be replaced"
                    android:id="@+id/fabric_finish_date"
                    android:textAllCaps="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center" />

            </FrameLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fabric_notes"
            android:layout_marginBottom="4dp"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:background="@null"
            android:padding="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/fabric_notes_hint"
            android:id="@+id/fabric_notes" />

    </LinearLayout>

</ScrollView>